--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "babel-preset-expo": "~54.0.0",
     "expo": "^54.0.17",
+    "expo-haptics": "~15.0.7",
     "expo-router": "~6.0.13",
+    "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
